--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,3 +3,6 @@
 @import "partials/login";
 @import "partials/playlist";
 @import "partials/shop";
+@import "partials/all";
+@import "sass2.scss/mixins";
+@import "sass2.scss/extend"
