--- a/css/style.css
+++ b/css/style.css
@@ -1,137 +1,75 @@
-* {
-  padding: 0%;
-  margin: 0%; }
+.one-direction-twice-carpenter-r5, .grid-albums .grid-albums {
+  display: flex;
+  justify-content: center; }
 
-a:hover {
-  color: orange !important; }
+.one-direction-twice-carpenter-r5, .grid-albums .grid-albums {
+  display: flex;
+  justify-content: center; }
 
-h1:hover {
-  color: orange !important; }
+section .img {
+  height: 100vh;
+  width: 98vw;
+  position: relative; }
 
-h1 {
-  text-align: center;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  color: #ffff;
-  margin: 200px 0 50px 0; }
+section h1 {
+  font-size: 3rem;
+  position: absolute;
+  color: #ffffff;
+  top: 50%;
+  left: 50%; }
 
 .grid-artist {
-  margin: 0 40px 0 40px;
   display: grid;
+  margin-left: 2rem;
   grid-template-columns: repeat(6, 1fr);
-  gap: 20px; }
+  gap: 2em; }
   .grid-artist .artist {
-    border-radius: 20px; }
-
-@media screen and (max-width: 900px) {
-  .grid-artist {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 20px; }
-  .artist {
-    border-radius: 20px; } }
-
-@media screen and (max-width: 600px) {
-  .grid-artist {
-    margin: 15px;
-    padding: 20px 0;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 5px; }
-  .artist {
-    border-radius: 20px; } }
-
-@media screen and (max-width: 320px) {
-  .grid-artist {
-    margin: 70px;
-    padding: 10px 0;
-    gap: 20px;
-    display: grid;
-    grid-template-columns: repeat(1, 1fr); }
-  .artist {
-    border-radius: 20px;
-    display: flex;
-    justify-content: center; } }
+    border-radius: 1em; }
+  @media screen and (max-width: 900px) {
+    .grid-artist {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 2em; } }
+  @media screen and (max-width: 600px) {
+    .grid-artist {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 2em; } }
+  @media screen and (max-width: 380px) {
+    .grid-artist {
+      display: grid;
+      grid-template-columns: repeat(1, 1fr);
+      margin-left: 5rem; }
+      .grid-artist .artist {
+        width: 70%; } }
 
 .grid-albums {
   display: grid;
-  margin: 0 40px 0 40px;
+  margin: 2rem;
   grid-template-columns: repeat(4, 1fr);
-  gap: 10px; }
-  .grid-albums .one-direction {
-    display: flex;
-    justify-content: center; }
-  .grid-albums .twice {
-    display: flex;
-    justify-content: center; }
-  .grid-albums .carpenter {
-    display: flex;
-    justify-content: center; }
-  .grid-albums .r5 {
-    display: flex;
-    justify-content: center; }
-
-@media screen and (max-width: 900px) {
-  .grid-albums {
-    display: grid;
-    margin: 0 40px 0 40px;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 20px; }
-  .one-direction {
-    display: flex;
-    justify-content: center; }
-  .twice {
-    display: flex;
-    justify-content: center; }
-  .carpenter {
-    display: flex;
-    justify-content: center; }
-  .r5 {
-    display: flex;
-    justify-content: center; } }
-
-@media screen and (max-width: 600px) {
-  .grid-albums {
-    display: grid;
-    margin: 0 25px 0 30px;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 20px; }
-  .one-direction {
-    display: flex;
-    justify-content: center; }
-  .twice {
-    display: flex;
-    justify-content: center; }
-  .carpenter {
-    display: flex;
-    justify-content: center; }
-  .r5 {
-    display: flex;
-    justify-content: center; } }
-
-@media screen and (max-width: 320px) {
-  .grid-albums {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    gap: 20px;
-    justify-content: center; }
-  .one-direction {
-    display: flex;
-    justify-content: center; }
-  .twice {
-    display: flex;
-    justify-content: center; }
-  .carpenter {
-    display: flex;
-    justify-content: center; }
-  .r5 {
-    display: flex;
-    justify-content: center; } }
+  gap: 1em; }
+  @media screen and (max-width: 900px) {
+    .grid-albums {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr); } }
+  @media screen and (max-width: 600px) {
+    .grid-albums {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 2em;
+      margin-left: 1rem; } }
+  @media screen and (max-width: 380px) {
+    .grid-albums {
+      display: grid;
+      grid-template-columns: repeat(1, 1fr);
+      gap: 2em;
+      margin-left: 3rem; } }
 
 .grid-podcast {
   display: grid;
-  margin: 0 40px 0 40px;
+  margin: 1rem;
   grid-template-columns: repeat(2, 1fr);
-  gap: 40px; }
+  gap: 3em; }
   .grid-podcast .ids {
     display: flex;
     justify-content: center; }
@@ -181,7 +119,7 @@ h1 {
     display: flex;
     justify-content: center; } }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 380px) {
   .grid-podcast {
     display: grid;
     grid-template-columns: repeat(1, 1fr); }
@@ -268,7 +206,7 @@ h1 {
     display: flex;
     justify-content: center; } }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 380px) {
   .grid-mix {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
@@ -377,7 +315,7 @@ h1 {
     gap: 40px;
     margin-left: 50px; } }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 380px) {
   .container-playlist {
     width: 100%;
     max-width: 1200px;
@@ -432,7 +370,7 @@ h1 {
     height: 180px;
     border-radius: 10px; } }
 
-@media screen and (max-width: 300px) {
+@media screen and (max-width: 380px) {
   .grid-caja-shop {
     width: 55%;
     max-width: 1200px;
@@ -445,3 +383,40 @@ h1 {
     width: 155px;
     height: 175px;
     border-radius: 10px; } }
+
+.one-direction-twice-carpenter-r5, .grid-albums .grid-albums {
+  display: flex;
+  justify-content: center; }
+
+.one-direction-twice-carpenter-r5, .grid-albums .grid-albums {
+  display: flex;
+  justify-content: center; }
+
+* {
+  padding: 0%;
+  margin: 0%; }
+
+a:hover {
+  color: orange !important; }
+
+h2:hover {
+  color: orange !important; }
+
+.h2 {
+  text-align: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: #ffff;
+  margin: 200px 0 50px 0; }
+
+.h1 {
+  text-align: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: #ffff; }
+
+.one-direction-twice-carpenter-r5, .grid-albums .grid-albums {
+  display: flex;
+  justify-content: center; }
+
+.one-direction-twice-carpenter-r5, .grid-albums .grid-albums {
+  display: flex;
+  justify-content: center; }
