--- a/css/style.css
+++ b/css/style.css
@@ -402,13 +402,16 @@ a:hover {
 h2:hover {
   color: orange !important; }
 
-.h2 {
+h1:hover {
+  color: orange !important; }
+
+h2 {
   text-align: center;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   color: #ffff;
   margin: 200px 0 50px 0; }
 
-.h1 {
+h1 {
   text-align: center;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   color: #ffff; }
