--- a/scss/partials/_all.scss
+++ b/scss/partials/_all.scss
@@ -15,9 +15,12 @@ a:hover{
 h2:hover{
     color: $color !important;
 }
+h1:hover{
+    color: $color !important;
+}
 
 
-.h2{
+h2{
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: #ffff;
@@ -25,7 +28,7 @@ h2:hover{
 }
 
 
-.h1{
+h1{
     text-align: center;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     color: #ffff;
