--- a/scss/partials/_all.scss
+++ b/scss/partials/_all.scss
@@ -21,14 +21,25 @@ h1:hover{
 
 
 h2{
+    margin-top: 5em ;
+    margin-bottom: 1em;
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: #ffff;
-    margin: 200px 0 50px 0;
+    font-size: 3rem;
 }
 
 
 h1{
+    margin-top: 5em ;
+    margin-bottom: 1em;
+    text-align: center;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    color: #ffff;
+    font-size: 3rem;
+}
+
+.h1{
     text-align: center;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     color: #ffff;
