--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,8 +1,8 @@
 @import "partials/home";
-@import "partials/about";
+@import "partials/inicio";
 @import "partials/login";
 @import "partials/playlist";
 @import "partials/shop";
 @import "partials/all";
 @import "sass2.scss/mixins";
-@import "sass2.scss/extend"
+@import "sass2.scss/extend";
