--- a/scss/sass2.scss/_extend.scss
+++ b/scss/sass2.scss/_extend.scss
@@ -7,4 +7,13 @@
 }
 
 
+.ids-itiel-agape-alex{
+    display: flex;
+    justify-content: center;
+}
+
+.daily-mix-1-daily-mix-2-daily-mix-3-mix-country-mix-pop-mix-latino-mix-melanco-mix-90{
+    display: flex;
+    justify-content: center;
+}
 
